adding a form for new lists

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,4 +2,7 @@
 
 <ul> 
 	<li><a href="/specific_list">Specific List</a></li>
+	<% @lists.each do |list| %>
+	<li> <%= list %></li>
+	<% end %> 
 </ul>
