--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Create a list</h2>
 
-<form>
+<%= form_tag "/new" do %>
 	<input type="text" name="title" placeholder="List title" />
 	<button type="submit">Submit</button>
-<form>
+<% end %>
